Move checkout and version pinning from source.ini(mxdev) to mx.ini(mxmake)

--- a/mx.ini
+++ b/mx.ini
@@ -1,5 +1,9 @@
 # mxmake related mxdev extensions
 [settings]
+# constraints of Plone packages
+version-overrides =
+    plone.api>=2.0.0a3
+
 # templates to generate
 mxmake-templates =
     run-tests
@@ -16,3 +20,8 @@ environment = env
 [mxmake-run-coverage]
 # optional coverage environment variables
 environment = env
+
+
+[plone.restapi]
+url=git@github.com:plone/plone.restapi.git
+branch=master
