Install cookiecutter from source

--- a/mx.ini
+++ b/mx.ini
@@ -25,3 +25,7 @@ environment = env
 [plone.restapi]
 url=git@github.com:plone/plone.restapi.git
 branch=master
+
+[cookiecutter]
+url=git@github.com:cookiecutter/cookiecutter.git
+branch=master
