--- a/mx.ini
+++ b/mx.ini
@@ -25,6 +25,8 @@ environment = env
 [plone.restapi]
 url=git@github.com:plone/plone.restapi.git
 branch=master
+extras = test
+mxmake-test-path = src
 
 [cookiecutter]
 url=git@github.com:cookiecutter/cookiecutter.git
