Checkout plone.api with extras "test". Pin manuel.

--- a/mx.ini
+++ b/mx.ini
@@ -2,7 +2,8 @@
 [settings]
 # constraints of Plone packages
 version-overrides =
-    plone.api>=2.0.0a3
+    # plone.api>=2.0.0a3
+    manuel>=1.11.2
 
 # templates to generate
 mxmake-templates =
@@ -24,6 +25,12 @@ environment = env
 
 [plone.restapi]
 url=git@github.com:plone/plone.restapi.git
+branch=master
+extras = test
+mxmake-test-path = src
+
+[plone.api]
+url=git@github.com:plone/plone.api.git
 branch=master
 extras = test
 mxmake-test-path = src
