--- a/mx.ini
+++ b/mx.ini
@@ -38,3 +38,9 @@ mxmake-test-path = src
 [cookiecutter]
 url=git@github.com:cookiecutter/cookiecutter.git
 branch=master
+
+[collective.bookmarks]
+url=git@github.com:collective/collective.bookmarks.git
+branch=master
+extras = test
+mxmake-test-path = src
