--- a/instance.yaml
+++ b/instance.yaml
@@ -1,6 +1,6 @@
 default_context:
   initial_user_name: "admin"
-  initial_user_password: "admin"
+  initial_user_password: "secret"
 
   load_zcml:
     package_includes: ["collective.easyform", collective.bookmarks]
