--- a/mx.ini
+++ b/mx.ini
@@ -10,17 +10,17 @@ mxmake-templates =
     run-tests
     run-coverage
 
-# environment variables
-[mxmake-env]
-# VAR = value
+; # environment variables
+; [mxmake-env]
+; # VAR = value
 
-[mxmake-run-tests]
-# optional test environment variables
-environment = env
+; [mxmake-run-tests]
+; # optional test environment variables
+; environment = env
 
-[mxmake-run-coverage]
-# optional coverage environment variables
-environment = env
+; [mxmake-run-coverage]
+; # optional coverage environment variables
+; environment = env
 
 
 [plone.restapi]
