--- a/instance.yaml
+++ b/instance.yaml
@@ -2,6 +2,8 @@ default_context:
   initial_user_name: "admin"
   initial_user_password: "secret"
 
+  # wsgi_listen: localhost:8082
+
   load_zcml:
     package_includes: ["collective.easyform", collective.bookmarks]
 
